--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy": "npm run build",
+    "predeploy": "vite build",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
@@ -32,5 +32,5 @@
     "globals": "^15.14.0",
     "vite": "^6.0.5"
   },
-  "homepage": "https://AnassDoublal.github.io/Song-Lyrics"
+  "homepage": "https://AnassDoublal.github.io/Lyrix"
 }
